main-search.scss — fix aside scrollbar width for Mozilla Firefox

--- a/src/blocks/main-search/main-search.scss
+++ b/src/blocks/main-search/main-search.scss
@@ -136,6 +136,7 @@
     padding-right: rem(26);
     height: 100vh;
     background-color: $color-white;
+    scrollbar-width: thin;
 
     @include screen-xl {
       position: fixed;
